dataset1235/2025-2/2947369575/users/2898291405/executions/1003782500_4233865845.log
== RUN (2025-08-27 19:04:57)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:02)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:06:57)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:47)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:00)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:17:27)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 + 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:03)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:04:59)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:07:01)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:02)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:07:00)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:00)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:05)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:48)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:02)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:04:58)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:01)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:06:59)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:47)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:05:04)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:03)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 19:05:05)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:04:55)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:04:53)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:04:58)
-- CODE: 
celcius = float(input())

fahrenheit = celcius * 9/5 = 32

print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    fahrenheit = celcius * 9/5 = 32
                 ^^^^^^^^^^^^^
SyntaxError: cannot assign to expression
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
